# pasta-msm

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
benches/: main.rs
cuda/: pallas.cu  vesta.cu
src/: jacobian_t.hpp  lib.rs  pasta_t.hpp  pippenger.cpp  tests.rs  thread_pool_t.hpp  xyzz_t.hpp
