[package]
name = "pasta-msm"
version = "0.1.1"
edition = "2018"
license = "Apache-2.0"
description = "Optimized multiscalar multiplicaton for Pasta moduli for x86_64 and aarch64"
repository = "https://github.com/supranational/pasta-msm"
readme = "README.md"
include = [
    "/benches/**",
    "/cuda/**",
    "/src/**",
    "/Cargo.toml",
    "/build.rs",
    "/README.md",
]

[features]
# By default, compile with ADX extension if the host supports it.
# Binary can be executed on systems similar to the host.
default = []
# Compile in portable mode, without ISA extensions.
# Binary can be executed on all systems.
portable = [ "semolina/portable" ]
# Enable ADX even if the host CPU doesn't support it.
# Binary can be executed on Broadwell+ and Ryzen+ systems.
force-adx = [ "semolina/force-adx" ]
cuda-mobile = []

[dependencies]
semolina = { git = "https://github.com/supranational/semolina" }
sppark = { git = "https://github.com/supranational/sppark" }
pasta_curves = { version = "^0.3.1", features = ["repr-c"] }

[build-dependencies]
cc = "^1.0.70"
which = "^4.0"

[dev-dependencies]
criterion = { version = "0.3", features = [ "html_reports" ] }
rand = "^0"
rand_chacha = "^0"
rayon = "1.5"

[[bench]]
name = "main"
harness = false
